# slush-cmake

./: CHANGELOG  CONTRIBUTING.md  LICENSE  README.md  package.json  slushfile.js
templates/: CMakeLists.txt  _gitignore
templates/== appName ==/: CMakeLists.txt
templates/== appName ==/src/: main.cpp
templates/== libraryName1 ==/: CMakeLists.txt  library_main.cpp
templates/== libraryName1 ==/include/== libraryName1 ==/: == libraryName1 ==.h
templates/== libraryName1 ==_test/: CMakeLists.txt  test1.cpp
templates/== libraryName2 ==/: CMakeLists.txt  library_main.cpp
templates/== libraryName2 ==/include/== libraryName2 ==/: == libraryName2 ==.h
templates/== libraryName2 ==_test/: CMakeLists.txt  test1.cpp
templates/cmake/: AddAppPackage.cmake  AddExternalModule.cmake  AddLibraryPackage.cmake  AddModule.cmake  SetupGoogleTest.cmake
templates/doc/: CMakeLists.txt  conf.py.in
templates/mylib/: CMakeLists.txt  mylib.cpp
templates/mylib/include/mylib/: mylib.h
templates/mylib2/: CMakeLists.txt  main.cpp  mylib2.cpp
templates_Catch2/== libraryName1 ==_test/: CMakeLists.txt
templates_Catch2/== libraryName1 ==_test/src/: test1.cpp
templates_Catch2/== libraryName2 ==_test/: CMakeLists.txt
templates_Catch2/== libraryName2 ==_test/src/: test1.cpp
templates_GoogleTest/== libraryName1 ==_test/: CMakeLists.txt
templates_GoogleTest/== libraryName2 ==_test/: CMakeLists.txt
